<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/msisdn_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/msisdn_instruction"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/msisdnTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:prefixText="+2223"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/msisdn_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/msisdn_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:hint="@string/msisdn"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/precreated_imsi_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_precreated_imsi"
        android:checked="true"
        android:visibility="gone"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/msisdnTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/imsi_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="32dp"
        android:text="@string/imsi_instruction"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/msisdnTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imsiTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:prefixText="609010"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/imsi_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/imsi_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:hint="@string/imsi"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/otp_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="10dp"
        android:text="Envoyer OTP"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/msisdnTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/OtpTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:prefixText=""
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/otp_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="OTP Code"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/next_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_btn"
        android:drawableEnd="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>